--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tanishka.gcpsample">
-<uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <permission android:name="com.example.tanishka.gcpsample.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
-    <uses-permission android:name="com.example.tanishka.gcpsample.permission.C2D_MESSAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <permission
+        android:name="com.example.tanishka.gcpsample.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.tanishka.gcpsample.permission.C2D_MESSAGE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.tanishka.gcpsample.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.google.android.gms.gcm.GcmReceiver"
+
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="com.example.tanishka.gcpsample" />
             </intent-filter>
-            </receiver>
-        <service android:name="com.example.tanishka.gcpsample.GCMRegisterationIntentService"
-            android:exported="false">
-            </service>
-        <service android:name="com.example.tanishka.gcpsample.GCMPushRecieverService"
+        </receiver>
+
+        <service
+            android:name=".GCMRegisterationIntentService"
+            android:exported="false"></service>
+        <service
+            android:name=".GCMPushRecieverService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-        <service android:name="com.example.tanishka.gcpsample.GCMTokenRefresh"
+        <service
+            android:name=".GCMTokenRefresh"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
 
+        <activity android:name=".TabViewActivity"></activity>
     </application>
 
 </manifest>
