--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-gcm:8.3.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile "com.google.android.gms:play-services-gcm:9.0.0"
+    compile 'com.android.support:appcompat-v7:23.4.0'
+
 }
