--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 
 
@@ -36,6 +35,7 @@
         </service>
         <service
             android:name=".GCMTokenRefresh"
+            android:exported="false"
             >
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
